Project simpleBank {
  database_type: 'PostgreSQL'
  Note: '''
    # simplebank database
  '''
}

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  is_email_verified bool [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01']
  created_at timestamptz [not null, default: `now()`]
}

Table verify_emails {
  id bigserial [pk]
  username varchar [ref: > U.username, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '15 minutes'`]
}

Table account as A {
  id bigserial [pk]
  owner varchar [not null]
  balance bigint [not null]
  curerency varchar [not null]
  created_at timestamp [not null,default:`now()`]
  Indexes{
    owner
  }  
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id]
  amount bigint [not null,note: 'can be negative or positive value']
  created_at timestamp [not null,default: `now()`]
  Indexes{
    account_id
  }
}

Table transfers {
  id bigserial [primary key]
  from_account_id bigserial [ref: > A.id]
  to_account_id bigserial [ref: > A.id]
  amount bigint [not null,note: 'must be positive value']
  created_at timestamp [not null,default: `now()`]
  Indexes{
    from_account_id
    to_account_id
    (from_account_id,to_account_id)
  }
}

Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}